# parakeet-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  pixi.toml
.cargo/: config.toml
melops/: Cargo.toml  build.rs
melops-asr/: Cargo.toml  README.md
melops-asr/src/: audio.rs  chunk.rs  detokenizer.rs  error.rs  lib.rs  pipelines.rs  preprocessor.rs  traits.rs  types.rs
melops-asr/src/models/: mod.rs  tdt.rs
melops-asr/src/models/tdt/: asr_impl.rs  core.rs  detokenizer.rs  inference.rs  merge.rs  mod.rs
melops-cli/: Cargo.toml  build.rs
melops-cli/src/: cli.rs  dl.rs  lib.rs  main.rs  run.rs
melops-cli/tests/: integration.rs
melops-dl/: Cargo.toml  README.md
melops-dl/src/: asr.rs  dl.py  dl.rs  lib.rs
melops-dl/tests/: download.rs
melops-export/: README.md  pixi.toml  pyproject.toml
melops-export/src/melops_export/: __init__.py  __main__.py  export.py
melops/src/: cap.rs  cli.rs  config.rs  dl.rs  lib.rs  main.rs  segment.rs  srt.rs
melops/tests/: integration.rs
parakeet-cli/: Cargo.toml  build.rs
parakeet-cli/src/: main.rs
parakeet-rs/: Cargo.toml  README.md
parakeet-rs/examples/: transcribe.rs
parakeet-rs/src/: audio.rs  lib.rs  model.rs  model_eou.rs  model_tdt.rs  parakeet.rs  parakeet_eou.rs  parakeet_tdt.rs  sortformer.rs  timestamps.rs
