[workspace]
resolver = "2"
members = ["parakeet-rs", "parakeet-cli", "melops-dl"]

[workspace.package]
version = "0.2.6"
edition = "2024"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/Stanley5249/parakeet-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
parakeet-rs = { path = "parakeet-rs" }
eyre = "0.6"
hf-hub = { version = "0.4", default-features = false, features = [
  "default-tls",
  "ureq",
] }
hound = "3.5"
ndarray = "0.16"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
rustfft = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.22.2", default-features = false, features = [
  "onig",
] }
