[workspace]
resolver = "2"
members = ["parakeet-rs", "melops-cli", "melops-dl"]

[workspace.package]
version = "0.2.6"
edition = "2024"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/Stanley5249/parakeet-rs"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
melops-cli = { path = "melops-cli" }
melops-dl = { path = "melops-dl" }
parakeet-rs = { path = "parakeet-rs" }

dirs = "6.0.0"
eyre = "0.6.12"
hf-hub = { version = "0.4.3", default-features = false, features = [
  "default-tls",
  "ureq",
] }
hound = "3.5.1"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = { version = "0.22.2", default-features = false, features = [
  "onig",
] }
