[workspace]
resolver = "2"
members = ["melops", "melops-asr", "melops-dl"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Stanley5249 <seer852741@gmail.com>"]
description = "Speech recognition and audio processing workspace"
repository = "https://github.com/Stanley5249/melops"
license = "MIT"

[workspace.dependencies]
melops = { path = "melops" }
melops-asr = { path = "melops-asr" }
melops-dl = { path = "melops-dl" }

clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
eyre = "0.6.12"
hf-hub = { version = "0.4.3", default-features = false, features = [
  "default-tls",
  "ureq",
] }
hound = "3.5.1"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10", default-features = false }
thiserror = "2.0.17"
tokenizers = { version = "0.22.2", default-features = false, features = [
  "onig",
] }
