[package]
name = "melops-asr"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TDT-optimized ASR chunking orchestration for production captioning"
repository.workspace = true
license.workspace = true

[dependencies]
parakeet-rs.workspace = true

eyre.workspace = true
hf-hub.workspace = true
hound.workspace = true
ndarray.workspace = true
ort = { workspace = true, features = ["std", "ndarray", "tracing"] }
thiserror.workspace = true
tokenizers.workspace = true

tracing = "0.1.44"
ndarray-stats = "0.6"

[dev-dependencies]
ort = { workspace = true, features = ["download-binaries", "copy-dylibs"] }
