[package]
name = "melops-asr"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "ASR library for Parakeet models with chunking support for long audio"
repository.workspace = true
license.workspace = true
keywords = ["asr", "parakeet", "onnx", "speech-to-text", "nvidia"]
categories = ["multimedia::audio", "science"]

[dependencies]
eyre.workspace = true
hf-hub.workspace = true
hound.workspace = true
ndarray.workspace = true
ort = { workspace = true, features = ["std", "ndarray", "tracing"] }
thiserror.workspace = true
tokenizers.workspace = true

ndarray-stats = "0.6"
rustfft = "6.4.1"
tracing = "0.1.44"

[dev-dependencies]
ort = { workspace = true, features = ["download-binaries", "copy-dylibs"] }
