[package]
name = "melops-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for speech-to-text transcription using NVIDIA Parakeet"
repository.workspace = true
license.workspace = true
keywords = ["asr", "nvidia", "onnx", "parakeet", "speech-recognition"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "melops"
path = "src/main.rs"

[dependencies]
parakeet-rs.workspace = true
eyre.workspace = true
hf-hub.workspace = true
hound.workspace = true

# Re-export ort for direct provider configuration
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

# Logging
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }

[features]
default = ["cpu"]

cpu = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
