[package]
name = "melops-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for speech-to-text transcription using NVIDIA Parakeet"
repository.workspace = true
license.workspace = true
keywords = ["asr", "nvidia", "onnx", "parakeet", "speech-recognition"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "melops"
path = "src/main.rs"

[dependencies]
dirs.workspace = true
eyre.workspace = true
hf-hub.workspace = true
hound.workspace = true
melops-dl.workspace = true
parakeet-rs.workspace = true

# Re-export ort for direct provider configuration
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

# Subtitle
srtlib = "0.2.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
tracing-appender = "0.2.4"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

[features]
# Execution Providers for ONNX Runtime

# === Shared Providers ===
# Runtime loading libraries
# Nvidia
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
# TensorRT RTX
# Might break in future, change to "nvrtx" when available
nv  = ["ort/nv"]
# Intel
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
# AMD
migraphx = ["ort/migraphx"]
vitis = ["ort/vitis"]
# Qualcomm
qnn = ["ort/qnn"]
# Community (Huawei)
cann = ["ort/cann"]

# === Static Providers ===
# Compile-time linked libraries
# Windows
directml = ["ort/directml"]
# AMD (Linux)
rocm = ["ort/rocm"]
# Apple
coreml = ["ort/coreml"]
# Google (Arm, x86, WebAssembly, and RISC-V)
xnnpack = ["ort/xnnpack"]
# Android
nnapi = ["ort/nnapi"]
# WebGPU
webgpu = ["ort/webgpu"]
# Cloud
azure = ["ort/azure"]
# Community (Arm)
acl = ["ort/acl"]
# Community (Arm)
armnn = ["ort/armnn"]
# Community (Apache TVM)
tvm = ["ort/tvm"]
# Community (Rockchip NPU)
rknpu = ["ort/rknpu"]
