[package]
name = "melops-dl"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
dirs.workspace = true

pyo3 = { version = "0.27.2", features = ["auto-initialize"] }

[dev-dependencies]
eyre.workspace = true
hound.workspace = true
