[package]
name = "melops-dl"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Audio download and organization utility"
repository.workspace = true
license.workspace = true
keywords = ["audio", "download", "youtube", "yt-dlp", "pyo3"]

[features]
default = []

[dependencies]
dirs.workspace = true

pyo3 = { version = "0.27.2", features = ["auto-initialize"] }

[dev-dependencies]
eyre.workspace = true
hound.workspace = true
