[package]
name = "melops"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI tool for audio captioning and speech-to-text with NVIDIA Parakeet"
repository.workspace = true
license.workspace = true
keywords = ["asr", "speech-to-text", "onnx", "subtitles", "youtube"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "mel"
path = "src/main.rs"

[dependencies]
dirs.workspace = true
eyre.workspace = true
hf-hub.workspace = true
hound.workspace = true
melops-asr.workspace = true
melops-dl.workspace = true

# Re-export ort for direct provider configuration
ort = { workspace = true, features = ["download-binaries", "copy-dylibs"] }

# Subtitle
srtlib = "0.2.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"

# CLI
clap.workspace = true
color-eyre = "0.6.5"

[features]
# Execution Providers for ONNX Runtime

# === Shared Providers ===
# Runtime loading libraries
# Nvidia
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
# TensorRT RTX
# Might break in future, change to "nvrtx" when available
nv = ["ort/nv"]
# Intel
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
# AMD
migraphx = ["ort/migraphx"]
vitis = ["ort/vitis"]
# Qualcomm
qnn = ["ort/qnn"]
# Community (Huawei)
cann = ["ort/cann"]

# === Static Providers ===
# Compile-time linked libraries
# Windows
directml = ["ort/directml"]
# AMD (Linux)
rocm = ["ort/rocm"]
# Apple
coreml = ["ort/coreml"]
# Google (Arm, x86, WebAssembly, and RISC-V)
xnnpack = ["ort/xnnpack"]
# Android
nnapi = ["ort/nnapi"]
# WebGPU
webgpu = ["ort/webgpu"]
# Cloud
azure = ["ort/azure"]
# Community (Arm)
acl = ["ort/acl"]
# Community (Arm)
armnn = ["ort/armnn"]
# Community (Apache TVM)
tvm = ["ort/tvm"]
# Community (Rockchip NPU)
rknpu = ["ort/rknpu"]
