[package]
name = "parakeet-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for speech-to-text transcription using NVIDIA Parakeet"
repository.workspace = true
license.workspace = true
keywords = ["asr", "nvidia", "onnx", "parakeet", "speech-recognition"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "parakeet"
path = "src/main.rs"

[dependencies]
parakeet-rs.workspace = true
eyre.workspace = true
hf-hub.workspace = true
hound.workspace = true

# Re-export ort for direct provider configuration
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

[features]
default = ["cpu"]

cpu = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
