[package]
name = "parakeet-rs"
version.workspace = true
edition.workspace = true
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository.workspace = true
license.workspace = true
keywords = ["asr", "nvidia", "onnx", "parakeet", "speech-recognition"]
categories = ["multimedia::audio", "science"]

[dependencies]
eyre.workspace = true
hound.workspace = true
ndarray.workspace = true
ort.workspace = true
rustfft.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true

[dev-dependencies]
hf-hub.workspace = true

[features]
default = []
sortformer = []
