[package]
name = "parakeet-rs"
version = "0.2.6"
edition = "2024"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/altunenes/parakeet-rs"
license = "MIT OR Apache-2.0"
keywords = ["speech-recognition", "asr", "parakeet", "onnx", "nvidia"]
categories = ["multimedia::audio", "science"]

[dependencies]
eyre.workspace = true
hound.workspace = true
ndarray.workspace = true
ort.workspace = true
rustfft.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true

[dev-dependencies]
hf-hub.workspace = true

[features]
default = []
sortformer = []
