[package]
name = "parakeet-rs"
version = "0.2.6"
edition = "2024"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/altunenes/parakeet-rs"
license = "MIT OR Apache-2.0"
keywords = ["speech-recognition", "asr", "parakeet", "onnx", "nvidia"]
categories = ["multimedia::audio", "science"]

[dependencies]
eyre.workspace = true
hound.workspace = true
ndarray.workspace = true
ort = { workspace = true, features = ["std", "ndarray"] }
tokenizers.workspace = true

rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
hf-hub.workspace = true

[features]
default = []
sortformer = []
